--- a/server/public/index.html
+++ b/server/public/index.html
@@ -37,50 +37,15 @@
             <section class="features-section">
                 <h2>📊 Analytics Features</h2>
                 <div class="features-grid">
-                    <!-- Dashboard -->
-                    <div class="feature-card" onclick="loadFeature('dashboard')">
-                        <div class="feature-icon">📈</div>
-                        <h3>Dashboard</h3>
-                        <p>Overview of enrollment statistics and key metrics</p>
-                    </div>
-
-                    <!-- Hotspots -->
-                    <div class="feature-card" onclick="loadFeature('hotspots')">
-                        <div class="feature-icon">🗺️</div>
-                        <h3>Geographic Hotspots</h3>
-                        <p>Gi* spatial analysis and coverage mapping</p>
-                    </div>
-
-                    <!-- Anomalies -->
-                    <div class="feature-card" onclick="loadFeature('anomalies')">
-                        <div class="feature-icon">⚠️</div>
-                        <h3>Anomaly Detection</h3>
-                        <p>ML-powered fraud and anomaly alerts</p>
-                    </div>
-
-                    <!-- Gender Tracker -->
-                    <div class="feature-card" onclick="loadFeature('gender')">
-                        <div class="feature-icon">👥</div>
-                        <h3>Gender Tracker</h3>
-                        <p>Gender inclusion gap analysis</p>
-                    </div>
-
-                    <!-- Risk Predictor -->
-                    <div class="feature-card" onclick="loadFeature('risk')">
-                        <div class="feature-icon">🔮</div>
-                        <h3>Risk Predictor</h3>
-                        <p>Biometric re-enrollment risk prediction</p>
-                    </div>
-
                     <!-- Enrollment Forecast -->
-                    <div class="feature-card" onclick="loadFeature('forecast')">
+                    <div class="feature-card" onclick="window.location.href='/forecast-dashboard'">
                         <div class="feature-icon">📅</div>
                         <h3>Enrollment Forecast</h3>
-                        <p>Time-series enrollment predictions</p>
+                        <p>ARIMA-based time-series enrollment predictions with confidence intervals</p>
                     </div>
 
                     <!-- Rush Period Analyzer -->
-                    <div class="feature-card" onclick="window.location.href='/rush-dashboard.html'">
+                    <div class="feature-card" onclick="window.location.href='/rush-dashboard'">
                         <div class="feature-icon">🗓️</div>
                         <h3>Rush Period Analyzer</h3>
                         <p>Predict busiest days & months for enrollment centers</p>
@@ -88,36 +53,18 @@
                 </div>
             </section>
 
-            <!-- Data Sources Section -->
+            <!-- Quick Links -->
             <section class="data-section">
-                <h2>📁 Data Sources</h2>
+                <h2>🔗 Quick Links</h2>
                 <div class="data-grid">
-                    <div class="data-card" onclick="loadData('enrolment')">
-                        <h4>📋 Enrolment Data</h4>
-                        <p>Monthly enrollment by state, district, age groups</p>
-                        <span class="data-badge">API 1</span>
+                    <div class="data-card" onclick="window.open('/forecast-dashboard', '_blank')">
+                        <h4>📈 State Dashboard</h4>
+                        <p>State-level enrollment forecast comparison</p>
                     </div>
-                    <div class="data-card" onclick="loadData('demographic')">
-                        <h4>👤 Demographic Updates</h4>
-                        <p>Demographic update statistics</p>
-                        <span class="data-badge">API 2</span>
+                    <div class="data-card" onclick="window.open('/rush-dashboard', '_blank')">
+                        <h4>🗓️ Rush Predictions</h4>
+                        <p>Peak day and month predictions</p>
                     </div>
-                    <div class="data-card" onclick="loadData('biometric')">
-                        <h4>🖐️ Biometric Updates</h4>
-                        <p>Biometric update records</p>
-                        <span class="data-badge">API 3</span>
-                    </div>
-                </div>
-            </section>
-
-            <!-- Results Display Area -->
-            <section class="results-section" id="results-section">
-                <div class="results-header">
-                    <h2 id="results-title">📊 Results</h2>
-                    <button class="btn-close" onclick="clearResults()">✕ Close</button>
-                </div>
-                <div class="results-content" id="results-content">
-                    <p class="placeholder">Select a feature or data source above to view results.</p>
                 </div>
             </section>
         </main>
@@ -128,8 +75,38 @@
         </footer>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="app.js"></script>
+    <script>
+        // Check backend status
+        async function checkStatus() {
+            const API_BASE = 'http://localhost:3001/api';
+            const ML_API_BASE = 'http://localhost:8000';
+
+            try {
+                const response = await fetch(`${API_BASE}/health`);
+                if (response.ok) {
+                    document.getElementById('backend-status').textContent = 'Online';
+                    document.querySelector('.status-item:first-child .status-dot').classList.add('online');
+                    document.querySelector('.status-item:first-child .status-dot').classList.remove('offline');
+                }
+            } catch (e) {
+                document.getElementById('backend-status').textContent = 'Offline';
+            }
+
+            try {
+                const response = await fetch(`${ML_API_BASE}/health`);
+                if (response.ok) {
+                    document.getElementById('ml-status').textContent = 'Online';
+                    document.querySelector('.status-item:last-child .status-dot').classList.add('online');
+                    document.querySelector('.status-item:last-child .status-dot').classList.remove('offline');
+                }
+            } catch (e) {
+                document.getElementById('ml-status').textContent = 'Offline';
+            }
+        }
+
+        // Check status on page load
+        checkStatus();
+    </script>
 </body>
 
 </html>
